fixed some spacing with practice midterm (letter search)

--- a/practice/practice-midterm-with-luis/css/styles.css
+++ b/practice/practice-midterm-with-luis/css/styles.css
@@ -17,7 +17,7 @@ table
 table, td
 {
     border: 1px solid black;
-    padding: 20px 60px;
+    padding: 20px 40px;
     background-color: white;
     /*padding: 20px 30px;*/
 }
